docs: Add README.md

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Este archivo es un ejemplo de como se debe configurar el archivo .env
-DB_URI=mongodb+srv://<USUARIO:CLAVE>@dona-t.rza1b.mongodb.net/?retryWrites=true&w=majority&appName=Dona-t
+DB_URI=AQUI_VA_TU_BASE_DE_DATOS_EN_MONGO_ATLAS_O_LOCAL
 
 # PUERTO EN EL QUE CORRERÁ EL SERVIDOR
 PORT=3000 
